# templatize

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  SPECIFICATION.md
.github/workflows/: build.yml  release.yml
crates/templatize-bin/: Cargo.toml  README.md  SPECIFICATION.md
crates/templatize-bin/src/: cli.rs  diff.rs  main.rs
crates/templatize-core/: Cargo.toml  README.md  SPECIFICATION.md
crates/templatize-core/src/: lib.rs  templater.rs
pkg/windows/: Templatize.iss
xtask/: Cargo.toml  README.md
xtask/src/: main.rs
