[package]
name = "templatize-bin"
description = "Templatize: Bin"
version.workspace = true
edition.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "templatize"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
inflections.workspace = true
inquire.workspace = true
similar.workspace = true
templatize-core.workspace = true